major: refactor and visual search